tests/NormalTests/paczka2/big_fuzzy/28129882.err
Error in line 4: FRdTekt A323 45,4
Error in line 8: udjrY A140 108,3
Error in line 11: A323 A323 99,7
Error in line 18: A323 Ag55 45,8
Error in line 22: FRdTekt A323 97,2
Error in line 58: ePt9 A323 4,00
Error in line 55: ePt9 A323 5,7
Error in line 59: ePt9 S538 41,9
Error in line 61: udjrY A140 94,9
Error in line 80: ePt9 S538 68,4
Error in line 81: ePt9 A755 54,5
Error in line 86: ePt9 A140 22,2
Error in line 88: ePt9 A755 96,3
Error in line 92: ePt9 A323 89,7
Error in line 90: 4s0qsrv1pS S538 60,2
Error in line 89: FRdTekt S538 487,4
Error in line 111: 4s0qsrv1pS A755 99,0
Error in line 118: udjrY A323 2,5
Error in line 124: ZyIuRkb A755 5,7
Error in line 136: tq6 A323 13,3
Error in line 141: ePt9 A140 76,0
Error in line 146: ePt9 A323 42,4
Error in line 148: ePt9 S538 74,5
Error in line 151: 4s0qsrv1pS S538 50,7
Error in line 152: udjrY S538 108,4
Error in line 168: udjrY A140 79,7
Error in line 169: ePt9 A755 61,0
Error in line 178: ePt9 A140 87,2
Error in line 179: ePt9 A755 52,9
Error in line 182: ePt9 S538 52,3
Error in line 184: ePt9 A140 76,8
Error in line 196: udjrY A755 26,4
Error in line 197: udjrY A140 98,5
Error in line 208: ePt9 A323 54,5
Error in line 210: ePt9 A140 679,0
Error in line 213: ZyIuRkb A140 134,8
Error in line 200: tq6 A140 63,5
Error in line 211: ePt9 A755 81,6
Error in line 220: ePt9 A323 96,6
Error in line 224: ZyIuRkb A755 8,2
Error in line 227: ZyIuRkb S538 30,7
Error in line 225: udjrY S538 87,1
Error in line 232: ePt9 A140 100,0
